--- a/procedure/GCMP_Caribbean_Analysis.Rmd
+++ b/procedure/GCMP_Caribbean_Analysis.Rmd
@@ -1,19 +1,19 @@
 ---
 title: "Global Coral Microbiome Project: Statistical Analysis and Modelling Workflow 2024"
 authors: "Colin Howe, Sofia Roitman"
-date: "01/17/2024"/
+start date: "01/17/2024"
+current date: "04/21/2024"
 output: html_document
 ---
 
 # First, Set working Directory load library and Import Data into Phyloseq
 ```{r warning=FALSE}
 # Command for setting your work directory
-setwd("C:/Users/Colin Howe/Desktop/PSU Doctoral Program/GCMP_Working/gcmp_qiime_input")
+knitr::opts_knit$set(root.dir =("C:/Users/Colin Howe/Desktop/PSU Doctoral Program/GCMP_Working/gcmp_analysis_2024/input"))
 
 # Print your working directory
+#getwd() 
 
-getwd()
-#
 ```
 
 ## Load required libraries. 
@@ -21,14 +21,13 @@ getwd()
 library(BiocManager)
 library(phyloseq)
 library(dplyr)
-library(qiime2R)
 library(DESeq2)
 library(ComplexHeatmap)
 library(ade4)
 library(vegan)
 library(RColorBrewer)
-library(tidyverse)
 library(ggplot2)
+library(ape)
 library(microbiome)
 library(dendextend)
 library(gplots)
@@ -37,26 +36,29 @@ library(tidyr)
 library(ggpubr)
 library(cowplot)
 library(RVAideMemoire)
-library(ape)
 library(microbiomeMarker)
+library(qiime2R)
+library(tidyverse)
+
 ```
 
 # Import OTU Table Taxonomy and Tree from Qiime2 and import Metadata
 ```{r}
 
 #Import from .qza file into a phyloseq object
-asv <- qza_to_phyloseq(features = "gcmp_qiime_input/filtered_merged_table_v2.qza")
+asv <- qza_to_phyloseq(features = "carib_silva_merged_table.qza")
 
 #### Import Metadata read.table
-metadata <- read.table(file = "gcmp_qiime_input/gcmp_mapping30_2024.csv",header=T,comment.char="", row.names=1, sep=",")
+metadata <- read.table(file = "../input/carib_merged_mapping.csv",header=T,comment.char="", row.names=1, sep=",")
 
 ### Import Tree file from biom output tree.nwk
-tree2 <- read_tree("gcmp_qiime_input/tree.nwk")
+tree2 <- read_tree("tree.nwk")
 
 ### Import taxonomy from biom output as .tsv format using read.table
-taxonomy <- read.table(file = "gcmp_qiime_input/taxonomy.tsv", sep = "\t", header = T ,row.names = 1)
+taxonomy <- read.table(file = "input/taxonomy.tsv", sep = "\t", header = T ,row.names = 1, )
 
 # clean the taxonomy
+
 ##code referenced from Yan Hui: email me@yanh.org github: yanhui09
 tax <- taxonomy %>%
   select(Taxon) %>% 
@@ -111,218 +113,233 @@ TREE = read_tree(tree2)
 # Create Working phyloseq object
 main_coral <- phyloseq(OTU,tax1,SAMPLE,TREE)
 
-library(gridExtra)
-# Remove features that have only been classified at the kingdom level
-phylo_noKing <-subset_taxa(main_coral, kingdom != "d__Eukaryota")
+# visualize tax table
+table(tax_table(main_coral)[,"Kingdom"])
 
-# Remove features that are identified as Chloroplast and Mitochondria or unclassified bacteria
-phylo_noNA <- subset_taxa(phylo_noKing,Phylum != "NA", Order!= "Chloroplast" & Family != "Mitochondria" & Order !="Unclassified bacteroidia")
+# remove unknown bacteria or unassigned
+phylo_noking <-main_coral %>%
+  phyloseq::subset_taxa(!Kingdom %in% c("Unassigned","Unclassified d__Bacteria","d__Eukaryota")) %>%
+  phyloseq::subset_taxa(!Phylum %in% c("Unclassified Unassigned","Unclassified d__Archaea","Unclassified d__Bacteria","Unclassified d__Eukaryota")) %>%
+  phyloseq::subset_taxa(!Family %in% c("Mitochondria","Chloroplast"))
 
 # Remove any samples with less than 1 read
-phylo_coral = prune_samples(sample_sums(phylo_noNA)>1, phylo_noNA)
-phylo_noNA
+phylo_coral = prune_samples(sample_sums(phylo_noking)>1, phylo_noking)
 phylo_coral
 
+# Subset only corals from database
+coral <-subset_samples(phylo_coral, sample_type_EMP == "coral" & outgroup == "n" & within_group == "yes") # all corals without out groups, environmental samples & subset expeditions (i.e, singapore).
+coral
+## Check: 
+table(tax_table(coral)[,"Family"])
+
+coral.rarefied = rarefy_even_depth(coral, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+coral.rarefied
+##Agglomerate taxa to family 
+glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 444 Samples 
+coral
+coral.rarefied
+glom_coral
+
+phyloseq::otu_table(coral.rarefied)%>%
+        as.data.frame() %>%
+        rownames_to_column("id") %>%
+        left_join(phyloseq::tax_table(coral.rarefied) %>%
+        as.data.frame() %>%
+        rownames_to_column("id")) -> coral_biom
+        
+
+write.csv(coral_biom, file ="GCMP24_rarefied_coral.csv")
+print(paste("Generating Rarefied Coral dataset:", coral.rarefied))
 
 ```
 
 ### Subset Caribbean Phyloseq Objects for Comparative Analysis 
 ```{r}
-## Create Phyloseq objects and subset dataset
-#clear entire dataset
-#rm(list=ls())
+## Caribbean dataset rarefication to 2000 per sample for downstream analysis Retained 1,222,000 (22.55%) features in 611 (82.12%) samples at the specifed sampling depth.
 
-## Caribbean Dataset rarefication to 2500 per sample for downstream analysis
- # seed set to 111 to keep result reproductive
-
-#### Subsample Robust clade
-robust <-subset_samples(phylo_coral, ocean_area == "Caribbean" & complex_robust == "robust")
-robust
+#colombia5 <-subset_samples(coral, political_area == "Colombia" & expedition_number == "E5" & sample_type_EMP == "coral" & outgroup == "n")
+#colombia5
 
 # rarefy to even depth
-robust.rarefied = rarefy_even_depth(robust, rngseed=111, sample.size=1000, replace=F)
-robust.rarefied
+#colombia.rarefied5 = rarefy_even_depth(colombia5, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#colombia.rarefied5
 
-## Subsample Robust Mucus
-robust.m <-subset_samples(phylo_coral, ocean_area == "Caribbean" & complex_robust == "robust" & BiologicalMatter == "Coral Mucus")
-
-# rarefy to even depth
-robust.m.rarefied = rarefy_even_depth(robust.m, rngseed=111, sample.size=1000, replace=F)
-robust.m.rarefied
-
-## Subsample Robust Skeleton
-robust.s <-subset_samples(phylo_coral, ocean_area == "Caribbean" & complex_robust == "robust"& BiologicalMatter == "Coral Skeleton")
+#### Subsample Colombia Expedition E12 This expedition is mainly comprised of sequences from 2022
+colombia12 <-subset_samples(coral, political_area == "Colombia" & expedition_number == "E12" & sample_type_EMP == "coral"& outgroup == "n")
+colombia12
 
 # rarefy to even depth
-robust.s.rarefied = rarefy_even_depth(robust.s, rngseed=111, sample.size=1000, replace=F)
-robust.s.rarefied
-robust.s
+colombia.rarefied12 = rarefy_even_depth(colombia12, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+colombia.rarefied12
 
-#### Subsample complex clade
-complex <-subset_samples(phylo_coral, ocean_area == "Caribbean" & complex_robust == "complex")
-complex
-
-# rarefy to even depth
-complex.rarefied = rarefy_even_depth(complex, rngseed=111, sample.size=1000, replace=F)
-complex.rarefied
-
-## Subsample complex mucus
-complex.m <-subset_samples(phylo_coral, ocean_area == "Caribbean" & complex_robust == "complex" & BiologicalMatter == "Coral Mucus")
-complex.m
+#### Subsample Corals from Colombia includes E5 & E12
+colombia <-subset_samples(coral, political_area == "Colombia" & sample_type_EMP == "coral" & outgroup == "n")
+colombia
 
 # rarefy to even depth
-complex.m.rarefied = rarefy_even_depth(complex.m, rngseed=111, sample.size=1000, replace=F)
-complex.m.rarefied
+colombia.rarefied = rarefy_even_depth(colombia, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+colombia.rarefied
 
-## Subsample complex tissue # only 6 complex skeleton samples remain after filtering. So Tissue and Skeleton Samples were combined
-complex.t <-subset_samples(phylo_coral, ocean_area == "Caribbean" & complex_robust == "complex"& BiologicalMatter == "Coral Tissue")
-complex.t
+#### Subsample Orbicella from Colombia E5 & E12
+#col_orb <-subset_samples(coral, political_area == "Colombia" & host_genus_id == "Orbicella")# political_area == "Colombia" & expedition_number == "E5")
+#col_orb
 
 # rarefy to even depth
-complex.t.rarefied = rarefy_even_depth(complex.t, rngseed=111, sample.size=1000, replace=F)
-complex.t.rarefied
+#col.orb.rarefied = rarefy_even_depth(col_orb, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#col.orb.rarefied
+
+#### Subsample Orbicella faveolata E5 & E12
+#faveolata <-subset_samples(coral, political_area == "Colombia" & host_species == "faveolata")
+#faveolata
+
+# rarefy to even depth faveolata
+#faveolata.rarefied = rarefy_even_depth(faveolata, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#faveolata.rarefied
 
 
-#Sub_sample Corals Acropora
-acro <-subset_samples(phylo_coral, ocean_area == "Caribbean" & family == "Acroporidae")
-acro
+############# Subsample Panama political_area including E2 & E11 East & West################
+#panama <-subset_samples(coral, political_area == "Panama" & sample_type_EMP == "coral" & outgroup == "n")
+#panama
 
-# rarefy sample to event depth
-acro.rarefied = rarefy_even_depth(acro, rngseed=111, sample.size=1000, replace=F)
-acro.rarefied
+# rarefy to even depth
+#panama.rarefied = rarefy_even_depth(panama, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#panama.rarefied
 
-## Subsample Meru * samples from both colombia and Panama may be an issue
-meru <-subset_samples(phylo_coral, country == "Colombia" & family == "Merulinidae")
-meru
-# rarefy sample to event depth
-meru.rarefied = rarefy_even_depth(meru, rngseed=111, sample.size=1000, replace=F)
-meru.rarefied
+#### Subsample Panama west E11
+panama.w <-subset_samples(coral, political_area == "Panama" & expedition_number == "E11" & sample_type_EMP == "coral" & outgroup == "n")
+panama.w
 
-## Subsample Meru
-meru.s <-subset_samples(phylo_coral, ocean_area == "Caribbean" & family == "Merulinidae" & BiologicalMatter == "Coral Skeleton")
-meru.s
+# rarefy to even depth
+panama.w.rarefied = rarefy_even_depth(panama.w, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+panama.w.rarefied
 
-# rarefy sample to event depth
-meru.s.rarefied = rarefy_even_depth(meru.s, rngseed=111, sample.size=1000, replace=F)
-meru.s.rarefied
+#### Subsample Panama east E2
+panama.e <-subset_samples(coral, political_area == "Panama" & expedition_number == "E2" & sample_type_EMP == "coral" & outgroup == "n")
+panama.e
 
+# rarefy to even depth
+panama.e.rarefied = rarefy_even_depth(panama.e, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+panama.e.rarefied
+
+#### Subsample Panama Orbicella Corals
+#pan_orb <-subset_samples(coral, political_area == "Panama" & host_genus_id == "Orbicella")
+#pan_orb
+
+# rarefy to even depth
+#pan.orb.rarefied = rarefy_even_depth(pan_orb, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#pan.orb.rarefied
+
+#### Subsample Panama Orbicella faveolata Corals
+#pan_ofav <-subset_samples(coral, political_area == "Panama" & host_species == "faveolata")
+#pan_ofav
+
+# rarefy to even depth
+#pan.ofav.rarefied = rarefy_even_depth(pan_ofav, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#pan.ofav.rarefied
+
+
+############# Subsample Orbicella and Environmental Samples################
+# subset Orbicella genus across colombia and panama (all orbicella samples) expedition 5 is well mixed between 2022 and 2023 sequencing. E12 is mainly from 2022 and all orbicella corals from E12 are from 2022. 
+#orbicella <- subset_samples(coral, host_genus_id == "Orbicella" & expedition_number == "E12") 
+
+# rarefy to even depth
+#orb.rarefied = rarefy_even_depth(orbicella, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#orb.rarefied
+
+## Overall Caribbean
+#carib <-subset_samples(coral, ocean_area == "Caribbean" & sample_type_EMP == "coral" & outgroup == "n")
+#carib
+
+# rarefy to even depth
+#carib.rarefied = rarefy_even_depth(carib, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#carib.rarefied
 
 #### Environmental Samples 
-env_sample <- subset_samples(phylo_coral, env_sample == "yes" & ocean_area == "Caribbean")
-env_sample
+#env_sample <- subset_samples(coral, env_sample == "yes" & political_area == "Colombia")
+#env_sample
 
 # keep result reproductive
-env.rarefied = rarefy_even_depth(env_sample, rngseed=111, sample.size=1000, replace=F)
-env.rarefied
+#env.rarefied = rarefy_even_depth(env_sample, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+#env.rarefied
 
-## Plot distribution
-glom_meru <- tax_glom(meru.rarefied, taxrank = 'Family', NArm = TRUE)## 21 samples
-glom_meru_s <- tax_glom(meru.s.rarefied, taxrank = 'Family', NArm = TRUE)## 21 samples
-glom_acro <- tax_glom(acro.rarefied, taxrank = 'Family', NArm = TRUE) ## 11 samples
-glom_env <- tax_glom(env.rarefied, taxrank = 'Family', NArm = TRUE) ## 15 samples
-glom_comp <- tax_glom(complex.rarefied, taxrank = 'Family', NArm = TRUE) ## 39 samples
-glom_rob <- tax_glom(robust.rarefied, taxrank = 'Family', NArm = TRUE) ## 52 samples
-glom_comp_m <- tax_glom(complex.m.rarefied, taxrank = 'Family', NArm = TRUE) ## 18 Samples
-glom_comp_t <- tax_glom(complex.t.rarefied, taxrank = 'Family', NArm = TRUE) ## 6 Samples * Skeleton 
-glom_rob_m <- tax_glom(robust.m.rarefied, taxrank = 'Family', NArm = TRUE) ## 17 Samples
-glom_rob_s <- tax_glom(robust.s.rarefied, taxrank = 'Family', NArm = TRUE) ## 19 Samples 
-
-```
-
-### Subset Australia Phyloseq Objects for Comparative Analysis 
-```{r}
-## Create Phyloseq objects and subset dataset
-#rm(list=ls())
-
-## Australian Dataset rarefication to 1000 per sample for downstream analysis
- # seed set to 111 to keep result reproductive
-
-#### Subsample Robust clade
-robust <-subset_samples(phylo_coral,country_region == "Australia_Pacific" & complex_robust == "robust")
-robust
-
-# rarefy to even depth
-robust.rarefied = rarefy_even_depth(robust, rngseed=111, sample.size=1000, replace=F)
-robust.rarefied
-
-## Subsample Robust Mucus
-robust.m <-subset_samples(phylo_coral,country_region == "Australia_Pacific" & complex_robust == "robust" & BiologicalMatter == "Coral Mucus")
-
-# rarefy to even depth
-robust.m.rarefied = rarefy_even_depth(robust.m, rngseed=111, sample.size=1000, replace=F)
-robust.m.rarefied
-
-## Subsample Robust Skeleton
-robust.s <-subset_samples(phylo_coral, country_region == "Australia_Pacific" & complex_robust == "robust"& BiologicalMatter == "Coral Skeleton")
-
-# rarefy to even depth
-robust.s.rarefied = rarefy_even_depth(robust.s, rngseed=111, sample.size=1000, replace=F)
-robust.s.rarefied
-robust.s
-
-#### Subsample complex clade
-complex <-subset_samples(phylo_coral, country_region == "Australia_Pacific" & complex_robust == "complex")
-complex
-
-# rarefy to even depth
-complex.rarefied = rarefy_even_depth(complex, rngseed=111, sample.size=1000, replace=F)
-complex.rarefied
-
-## Subsample complex mucus
-complex.m <-subset_samples(phylo_coral,  country_region == "Australia_Pacific" & complex_robust == "complex" & BiologicalMatter == "Coral Mucus")
-complex.m
-
-# rarefy to even depth
-complex.m.rarefied = rarefy_even_depth(complex.m, rngseed=111, sample.size=1000, replace=F)
-complex.m.rarefied
-
-## Complex Coral Skeleton
-complex.s <-subset_samples(phylo_coral, country_region == "Australia_Pacific" & complex_robust == "complex"& BiologicalMatter == "Coral Skeleton")
-complex.s
-
-# rarefy to even depth
-complex.s.rarefied = rarefy_even_depth(complex.s, rngseed=111, sample.size=1000, replace=F)
-complex.s.rarefied
-
-
-#Sub_sample Corals Acropora
-acro <-subset_samples(phylo_coral, country_region == "Australia_Pacific" & family == "Acroporidae")# & ocean == "Tasman Sea" & )
-acro
-
-# rarefy sample to event depth
-acro.rarefied = rarefy_even_depth(acro, rngseed=111, sample.size=1000, replace=F)
-acro.rarefied
-
-## Subsample Meru
-meru <-subset_samples(phylo_coral, country_region == "Australia_Pacific" & family == "Merulinidae")
-meru
-# rarefy sample to event depth
-meru.rarefied = rarefy_even_depth(meru, rngseed=111, sample.size=1000, replace=F)
-meru.rarefied
-
-#### Environmental Samples 
-env_sample <- subset_samples(phylo_coral, env_sample == "yes" &  country_region == "Australia_Pacific")
-env_sample
+#### Water 
+water <- subset_samples(phylo_coral, sample_type == "Reef Water")# & political_area == "Colombia")
+water
 
 # keep result reproductive
-env.rarefied = rarefy_even_depth(env_sample, rngseed=111, sample.size=1000, replace=F)
-env.rarefied
+water.rarefied = rarefy_even_depth(water, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+water.rarefied
 
-glom_meru_aus <- tax_glom(meru.rarefied, taxrank = 'Family', NArm = TRUE)## 91 samples
-glom_acro_aus <- tax_glom(acro.rarefied, taxrank = 'Family', NArm = TRUE) ## 95 samples
-glom_env_aus <- tax_glom(env.rarefied, taxrank = 'Family', NArm = TRUE) ## 10 samples
-glom_comp_aus <- tax_glom(complex.rarefied, taxrank = 'Family', NArm = TRUE) ## 205 samples
-glom_rob_aus <- tax_glom(robust.rarefied, taxrank = 'Family', NArm = TRUE) ## 247 samples
-glom_comp_m_aus <- tax_glom(complex.m.rarefied, taxrank = 'Family', NArm = TRUE) ## 77 Samples
-glom_comp_s_aus <- tax_glom(complex.s.rarefied, taxrank = 'Family', NArm = TRUE) ## 68 Samples 
-glom_rob_m_aus <- tax_glom(robust.m.rarefied, taxrank = 'Family', NArm = TRUE) ## 99 Samples
-glom_rob_s_aus <- tax_glom(robust.s.rarefied, taxrank = 'Family', NArm = TRUE) ## 77 Samples 
+#### Sediment 
+sediment <- subset_samples(phylo_coral, sample_type == "Reef Sediment" & political_area == "Colombia")
+sediment
+
+# keep result reproductive
+sed.rarefied = rarefy_even_depth(sediment, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+sed.rarefied
+
+## Hawaii 
+#### Subsample Panama east E2
+hawaii <-subset_samples(coral, expedition_number == "E15" & sample_type_EMP == "coral" & outgroup == "n")
+hawaii
+
+# rarefy to even depth
+hawaii.rarefied = rarefy_even_depth(hawaii, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+hawaii.rarefied
+
+## Compartment
+#### Subsample Mucus from Colombia
+mucus <-subset_samples(coral,BiologicalMatter == "Coral Mucus")
+mucus
+
+# rarefy to even depth
+mucus.rarefied = rarefy_even_depth(mucus, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+mucus.rarefied
+
+#### Subsample Panama east E12 E5
+tissue <-subset_samples(coral,BiologicalMatter == "Coral Tissue")
+tissue
+# rarefy to even depth
+tissue.rarefied = rarefy_even_depth(tissue, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+tissue.rarefied
+
+#### Subsample Panama east E12 E5
+skeleton <-subset_samples(coral, BiologicalMatter == "Coral Skeleton")
+skeleton
+# rarefy to even depth
+skeleton.rarefied = rarefy_even_depth(skeleton, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+skeleton.rarefied
+
+## Aglomerate Taxa to Family Level
+glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 444 Samples 
+#glom_col <- tax_glom(colombia.rarefied, taxrank = 'Family', NArm = TRUE)##  150 samples
+#glom_col5 <- tax_glom(colombia.rarefied5, taxrank = 'Family', NArm = TRUE)## 65 samples
+glom_col12 <- tax_glom(colombia.rarefied12, taxrank = 'Family', NArm = TRUE)## 85 samples
+#glom_col_orb <- tax_glom(col.orb.rarefied, taxrank = 'Family', NArm = TRUE)## 33 samples
+#glom_col12_orb <- tax_glom(orb.rarefied, taxrank = 'Family', NArm = TRUE)## 18 Samples
+#glom_ofav <- tax_glom(faveolata.rarefied, taxrank = 'Family', NArm = TRUE)## 15 Samples all from Colombia
+#glom_pan_ofav <- tax_glom(pan.ofav.rarefied, taxrank = 'Family', NArm = TRUE) # 9 Samples
+#glom_carib <-tax_glom(carib.rarefied, taxrank = 'Family', NArm = TRUE) ## 253 from  E2 Panama and Colombia E5 & E12
+
+#glom_pan <- tax_glom(panama.rarefied, taxrank = 'Family', NArm = TRUE)##  185 samples from Panama E2 and E11 
+glom_panw <- tax_glom(panama.w.rarefied, taxrank = 'Family', NArm = TRUE)## 82 samples
+glom_pane <- tax_glom(panama.e.rarefied, taxrank = 'Family', NArm = TRUE)##  102 samples
+#glom_pan_orb <- tax_glom(pan.orb.rarefied, taxrank = 'Family', NArm = TRUE)## 35 samples
+#glom_pan_ofav <- tax_glom(pan.ofav.rarefied, taxrank = 'Family',  NArm = TRUE)## 68 samples from the Caribbean
+#glom_env <- tax_glom(env.rarefied, taxrank = 'Family', NArm = TRUE)## 52 samples from Colombia, Panama only has one environmental sample
+glom_wat <- tax_glom(water.rarefied, taxrank = 'Family', NArm = TRUE)## 34 samples from Colombia, Panama only has one environmental sample
+glom_sed <- tax_glom(sed.rarefied, taxrank = 'Family', NArm = TRUE)## 17 samples from Colombia, Panama only has one environmental 
+glom_haw <- tax_glom(hawaii.rarefied, taxrank = 'Family', NArm = TRUE) ## 51 Samples 
+glom_mucus <- tax_glom(mucus.rarefied, taxrank = 'Family', NArm = TRUE)
+glom_tissue <- tax_glom(tissue.rarefied, taxrank = 'Family', NArm = TRUE)
+glom_skeleton <- tax_glom(skeleton.rarefied, taxrank = 'Family', NArm = TRUE)
+
 
 ```
 
 #Bruns et al. 2016 Neutral Model functions
 ```{r}
-################define sncm.fit############
+
 sncm.fit <- function(spp, pool=NULL, stats=TRUE, taxon=NULL){
 	require(minpack.lm)
 	require(Hmisc)
@@ -372,7 +389,7 @@ sncm.LL <- function(m, sigma){
 	-sum(log(R))
 }
 	
-m.mle <- mle(sncm.LL, start=list(m=0.1, sigma=0.1), nobs=length(p))
+m.mle <- mle(sncm.LL, start=list(m=0.1, sigma=0.1), nobs=length(p),"Nelder-Mead")
 
 ##Calculate Akaike's Information Criterion (AIC)
 aic.fit <- AIC(m.mle, k=2)
@@ -383,7 +400,7 @@ freq.pred <- pbeta(d, N*coef(m.fit)*p, N*coef(m.fit)*(1-p), lower.tail=FALSE)
 Rsqr <- 1 - (sum((freq - freq.pred)^2))/(sum((freq - mean(freq))^2))
 RMSE <- sqrt(sum((freq-freq.pred)^2)/(length(freq)-1))
 	
-pred.ci <- binconf(freq.pred*nrow(spp), nrow(spp), alpha=0.05, method="wilson", return.df=TRUE)
+pred.ci <- binconf(freq.pred*nrow(spp), nrow(spp), alpha=0.01, method="wilson", return.df=TRUE)
 	
 ##Calculate AIC for binomial model
 bino.LL <- function(mu, sigma){
@@ -461,15 +478,17 @@ addf = function(freq, pred.upr, pred.lwr) {
 ## Neutral Model test
 ```{r}
 ###coral communities
-set.seed(111)
-coral <- prune_taxa(taxa_sums(robust) > 0, robust)
+coral <- 0
+coral <- prune_taxa(taxa_sums(glom_coral) > 0, glom_coral)
 coral
 otu_coral = as.data.frame(t(otu_table(coral)))
 
+## Neutral fit
 mod_w_coral = sncm.fit(otu_coral)
 mod1_w_coral = sncm.fit(otu_coral,stats = F)
 
-min(sample_sums(glom_comp_aus))
+#min(sample_sums(glom_col_orb))
+print(length(mod_w_coral$freq))
 
 mod1_w_coral$model = mapply(addf, mod1_w_coral$freq, mod1_w_coral$pred.upr, mod1_w_coral$pred.lwr)  
 length(which(mod1_w_coral$model == "above"))
@@ -479,16 +498,21 @@ length(which(mod1_w_coral$model == "neutral"))
 mod1_w_coral$model <- factor(mod1_w_coral$model, 
                              levels = c("above", "neutral", "below"))
 
+mod1_w_coral %>% mutate(ci.mean = (pred.upr-pred.lwr),
+                        SE = (ci.mean/(2*1.96)),
+                        zstat = (freq/SE),
+                        padj = (exp(-0.717*zstat-0.416*zstat^2))*length(mod1_w_coral$model)) -> coral_padj
+
 ## Assign Taxonomy to table of significant microbes
-coral_taxa = cbind(as(mod1_w_coral, "data.frame"), as(tax_table(glom_acro_aus)[rownames(mod1_w_coral), ], "matrix"))
+coral_taxa = cbind(as(coral_padj, "data.frame"), as(tax_table(glom_coral)[rownames(coral_padj), ], "matrix"))
 #coral_taxa
-write.csv(coral_taxa,"Australian Acroporidae Mucus Neutral Taxonomy table.csv",row.names = TRUE)
+write.csv(coral_taxa,"Corals from E2 E5 E11 E12 E15 Neutral Taxonomy table.csv",row.names = TRUE)
 
 
 set.seed(111)
 ###seawater communities
 #seawater <- subset_samples(physeq2, SampleType == "seawater")
-seawater <- prune_taxa(taxa_sums(glom_meru_aus) >0, glom_meru_aus)
+seawater <- prune_taxa(taxa_sums(glom_wat) > 0, glom_wat )
 seawater
 
 otu_seawater = as.data.frame(t(otu_table(seawater)))
@@ -504,11 +528,17 @@ length(which(mod1_w_seawater$model == "neutral"))
 
 mod1_w_seawater$model <- factor(mod1_w_seawater$model, 
                                 levels = c("above", "neutral", "below"))
+mod1_w_seawater %>% mutate(ci.mean = (pred.upr-pred.lwr),
+                        SE = (ci.mean/(2*1.96)),
+                        zstat = (freq/SE),
+                        padj = (exp(-0.717*zstat-0.416*zstat^2))*length(mod1_w_coral$model)) -> envs_padj
 
 ## Assign Taxonomy to table of significant microbes
-env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_meru_aus)[rownames(mod1_w_seawater), ], "matrix"))
+env_taxa = cbind(as(envs_padj, "data.frame"), as(tax_table(glom_wat)[rownames(envs_padj), ], "matrix"))
 
-write.csv(env_taxa,"Australian Merulinidae Samples Neutral Taxonomy table.csv",row.names = TRUE)
+write.csv(env_taxa,"Colombia Water Samples Neutral Taxonomy table.csv",row.names = TRUE)
+
+
 ```
 
 ## Plot Neutral Model
@@ -522,7 +552,7 @@ p_neuM_coral=ggplot(mod1_w_coral, aes(x=log10(p), y=freq, color = model))+
             color="blue",linetype="dashed",linewidth=1)+
   geom_line(aes(x=log10(p), y=pred.upr),
             color="blue",linetype="dashed",linewidth=1)+
-  scale_colour_manual(name="OTUs",
+    scale_colour_manual(name="OTUs",
                       values=c("#E41A1C", "#999999", "#FF7F00"),
                       breaks=c("above", "neutral", "below"),
                       labels=c("Over-represented", "Neutrally-distributed", "Under-represented"))+
@@ -539,7 +569,7 @@ p_neuM_coral=ggplot(mod1_w_coral, aes(x=log10(p), y=freq, color = model))+
 
 lb1 <- mod_w_coral$Rsqr
 lb2 <- mod_w_coral$m
-lb3 <- expression(paste("Australian Acoporaidae Coral Samples"))
+lb3 <- expression(paste("Corals from E2 E5 E11 E12 E15 expeditions "))
 
 p_neuM_coral1 = p_neuM_coral + annotate("text", x = -3.5, y=0.7, size=6.5, label=lb1, 
                                         fontface="bold", color="black",
@@ -577,7 +607,7 @@ p_neuM_seawater=ggplot(mod1_w_seawater, aes(x=log10(p), y=freq, color = model))+
 
 ev1 <- mod_w_seawater$Rsqr
 ev2 <- mod_w_seawater$m
-ev3 <- expression(paste("Australian\n Merulinidae Coral Samples "))
+ev3 <- expression(paste("Colombian Water  Samples"))
 
 p_neuM_seawater1 = p_neuM_seawater + annotate("text", x = -3.5, y=0.7, size=6.5, label=ev1, 
                                               fontface="bold", color="black",
@@ -600,35 +630,31 @@ mp_ncm
 
 ```
 
-# Caribbean DISTANCE MATRICES
+# Calculate DISTANCE MATRICES
 ```{r}
-## Complex Corals 
-bray_complex = phyloseq::distance(complex.rarefied, method="bray")
-uni_complex = phyloseq::distance(complex.rarefied, method="unifrac")
-wuni_complex = phyloseq::distance(complex.rarefied, method="wUnifrac")
+## Distance Matrices
+# remove outlier
+to_remove <- ("230-HI62-T")
+orb_prune <- prune_samples(!(sample_names(coral.rarefied) %in% to_remove), coral.rarefied)
+## All Corals 
+bray_coral = phyloseq::distance(orb_prune, method="bray")
+uni_coral = phyloseq::distance(orb_prune, method="unifrac")
+wuni_coral = phyloseq::distance(orb_prune, method="wUnifrac")
 
 # Create data frame for downstream analysis
-comp_df <- data.frame(sample_data(complex.rarefied))
-
-## Robust Corals 
-bray_robust = phyloseq::distance(robust.rarefied, method="bray")
-uni_robust = phyloseq::distance(robust.rarefied, method="unifrac")
-wuni_robust = phyloseq::distance(robust.rarefied, method="wUnifrac")
-
-# Create data frame for downstream analysis
-rob_df <- data.frame(sample_data(robust.rarefied))
-
+coral_df <- data.frame(sample_data(orb_prune))
 
 ```
 
-# Ordination from Distance Matrix and plot PCoA 
+# Ordination from Distance Matrix and PCoA Plots 
 ```{r}
+
 ##Calculate the PCoA on Complex Corals
-rt.pcoa = ordinate(coral, method="PCoA", distance=wuni_coral)
+rt.pcoa = ordinate(coral.rarefied, method="PCoA", distance=uni_coral)
 # Set variables to zero for subsequent changes
-#Ofra
+# expedition_number
 pcoa<-0
-pcoa <- plot_ordination(coral, rt.pcoa,  shape = "country_region",color="family")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=country_region))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold"))) # title =expression(paste(italic(" Orbicella spp")," Bray-Curtis Distance PCoA across Depth")) scale_color_manual(values=c("#E31A1C","#1F78B4"))+
+pcoa <- plot_ordination(coral.rarefied, rt.pcoa,  shape = "sample_type",color="family")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=family))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold")))
                       
 
 ```
@@ -637,12 +663,12 @@ pcoa <- plot_ordination(coral, rt.pcoa,  shape = "country_region",color="family"
 ```{r}
 
 #env material include mucus, tissue and skeleton, and outgroups without eDNA
-distance_methods <-c("bray_coral","wuni_coral","uni_coral")
+distance_methods <-c("bray_coral","uni_coral","wuni_coral")
 set.seed(129)
 
 # This is what is called a for loop.        
 for (i in distance_methods){ 
-  form <- as.formula(paste(i,"country_region+family+BiologicalMatter+sequence_run", sep="~"))
+  form <- as.formula(paste(i,"expedition_number+family+sample_type+Huang_Roy_tree_name+host_genus_id", sep="~"))
   print(form)
  adonis2(form, data=coral_df)-> result
  print(result)
@@ -650,11 +676,10 @@ for (i in distance_methods){
  
 
 ## Post-hoc comparison between Coral Compartments and Location
-bray_coral_pairwise <-pairwise.perm.manova(bray_coral, coral_df$country_region,nperm=1000) 
-uni_coral_pairwise <-pairwise.perm.manova(uni_coral,coral_df$biological_matter,nperm=1000)
-wuni_coral_pairwise <-pairwise.perm.manova(wuni_coral,coral_df$biological_matter,nperm=1000)
-uni_all_com_post <-pairwise.perm.manova(uni_all,all_out_df$political_area,nperm=1000)
-uni_all_bio_post <-pairwise.perm.manova(uni_all,all_out_df$biological_matter,nperm=1000)
+
+bray_carib_pairwise <-pairwise.perm.manova(bray_coral, coral_df$family,nperm=1000,p.method = "BH") 
+uni_carib_pairwise <-pairwise.perm.manova(uni_coral,coral_df$family,nperm=1000,p.method = "BH")
+wuni_carib_pairwise <-pairwise.perm.manova(wuni_coral,coral_df$family,nperm=1000,p.method = "BH")
 
 ```
 
@@ -663,7 +688,7 @@ uni_all_bio_post <-pairwise.perm.manova(uni_all,all_out_df$biological_matter,npe
 ###Once we have our sub_samples rarefied we can start with some diversity analysis  and visualization
 ### Alpha Diversity ** you can make multiple diversity box plots by switch x for sample variables
 
-complex_diversity_compartment <- plot_richness(complex, x="family", color = "Genus", title = "Merulinidae Diversity Across compartment", measures = c("Shannon","Observed"),)+
+complex_diversity_compartment <- plot_richness(coral, x="expedition_number", color = "sample_type", title = "Coral Diversity Across compartment", measures = c("Shannon","Observed"),)+
   geom_boxplot() +
   theme_classic() +
   theme(strip.background = element_blank(), plot.title = element_text(hjust = 0.5), axis.text.x.bottom = element_text(angle = -90))
@@ -672,39 +697,51 @@ complex_diversity_compartment <- plot_richness(complex, x="family", color = "Gen
 
 # BAR PLOTS: Coral Compartments
 ```{r, message=FALSE, warning=FALSE}
-#### Use from agglomerated phyloseq objects from Neutral Model Section
+## Flavobacteriaceae & Cyclobacteriaceae seems to be the most frequent and abundant between Pamana east & West
+## Found Across Ofav samples in Colombia E5: Order: Halanaerobiales Family: Halanaerobiaceae
+## Halobacteroidaceae
+## Colombia Neutral Model shows Actinomarinaceae high relative abundance but low frequency
+#Flavobacteriaceae, Cyanobiaceae, Rhodobacteraceae, Endozoicomonadaceae, Amoebophilaceae
+#Nitrosopumilaceae, Cyclobacteriaceae, Sphingomonadaceae, Alteromonadaceae
+## This was the most abundance across the Caribbean: Fokiniaceae
 
+#### Use from agglomerated phyloseq objects from Neutral Model Section
+flavo <- subset_taxa(coral.rarefied, Family == "Rhodobacteraceae", NArm = TRUE)
+flavo_prune = prune_samples(sample_sums(flavo)>1, flavo)
 # Transform sample counts to proportion out of 100
-ps.all = transform_sample_counts(glom_comp, function(x) x/sum(x)*100)
+
+glom <- tax_glom(flavo, taxrank = 'Genus', NArm = TRUE)
+
+ps.all = transform_sample_counts(flavo_prune, function(x) x/sum(x)*100)
 ps.melt <- psmelt(ps.all)
 
 # change to character for easy-adjusted level
 ps.melt <- ps.melt %>%
-  group_by(family,BiologicalMatter,host_genus,country_region,Family) %>%
+  group_by(Genus,BiologicalMatter,expedition_number,site_name) %>%
   mutate(median=median(Abundance)) %>%
   arrange(desc(median))
 
 # select group median > 1
-keep <- unique(ps.melt$Order[ps.melt$median > 10])
-ps.melt$Order[!(ps.melt$Order %in% keep)] <- "< %2 (Other)"
+keep <- unique(ps.melt$Genus[ps.melt$median >= 1])
+ps.melt$Genus[!(ps.melt$Genus %in% keep)] <- "< %1 (Other)"
 
 #to get the same rows together
 #to get the same rows together
 ps.melt_sum <- ps.melt %>%
-  group_by(family,BiologicalMatter,Family) %>%
-  summarize(Abundance = sum(Abundance), 
-            mean = mean(Abundance), .groups = "drop") %>%
-            mutate(Order= factor(Order),
-                   Order= fct_reorder(Order,mean, .desc = TRUE),
-                   Order= fct_shift(Order, n=1))
-# Then Plot Results
+  group_by(Genus,BiologicalMatter,expedition_number,site_name) %>%
+  summarise(Abundance = sum(Abundance), 
+            mean = sum(Abundance), .groups = "drop") %>%
+            mutate(Genus= factor(Genus),
+                   Genus= fct_reorder(Genus ,mean, .desc = TRUE),
+                   Genus= fct_shift(Genus, n=1))
+
 # create an object with color blind safe orientation
 many_col <- c("#A6CEE3", "#33A02C", "#B2DF8A",  "#1F78B4","#E31A1C","#6A3D9A", "#FF7F00","#FDBF6F", "#FB9A99", "#CAB2D6",  "#B15928","#1B9E77", "#D95F02", "#FFFF99","#E7298A", "#7570B3","#666666" ,"#66A61E", "#E6AB02","#A6761D", "#E41A1C", "#377EB8", "#4DAF4A" ,"#984EA3", "#FF7F00", "#FFFF33", "#A65628", "#F781BF" ,"#D53E4F","#F46D43", "#FDAE61", "#FEE08B","#999999", "#E6F598","#ABDDA4","#3288BD","cyan1","#66C2A5")
 
 testp <-0
-testp <-ggplot(ps.melt, aes(x = family, y = Abundance, fill = Family)) + 
+testp <-ggplot(ps.melt_sum, aes(x = BiologicalMatter, y = Abundance, fill = Genus)) + 
   geom_bar(stat = "identity", position="fill")  +
-  labs( x=" family", y="Percent Relative Abundance (%)") +  scale_fill_manual(name=NULL, values = c(many_col))  +  facet_wrap(~BiologicalMatter, scales= "free_x", nrow=1) +  
+  labs( x=" Genus", y="Percent Relative Abundance (%)") +  scale_fill_manual(name=NULL, values = c(many_col))  +  facet_wrap(~BiologicalMatter, scales= "free_x", nrow=1) +  
   theme_classic() + theme(strip.background = element_blank(), axis.text.x.bottom = element_text(angle = 180) +
   theme(axis.text=element_text(size=12), axis.title=element_text(size=14,face="bold"), plot.title = element_text(size = 14, face = "bold",hjust = 0.5,),legend.text = element_text(size = 8), legend.box = "vertical") + theme(legend.text = element_text(size=12))+
                   theme(legend.key.size = unit(.9, 'cm')))  #title =expression(paste(italic(" Oribcella Spp."),"Microbial Community Composition Across Depth ")), + #
@@ -717,19 +754,19 @@ plot(testp)
 ## Use Distance matricies created above
 
 # run hclust command
-hc_complex_muc <- hclust(uuni_acro_ske, method = "ward.D2")
+hc <- hclust(uni_flavo, method = "ward.D2")
 
 # Get Tree tip label names 
-coral_family <- acro_ske_df$country_region
+tip_label <- flavo_df$sample_type
 
 # Add tip labels to hclust object
-hc_complex_muc$labels <- coral_family
+hc$labels <- tip_label
 
 ## Create the Dendrogram
-dend <- as.dendrogram(hc_complex_muc)
+dend <- as.dendrogram(hc)
 
 #dend <- color_branches(dend, k=9)
-plot(dend)
+
 
 ## clean up plot
 dend %>% set("leaves_pch", 15) %>% 
@@ -738,8 +775,8 @@ dend %>% set("leaves_pch", 15) %>%
   color_branches(dend, k=4) %>%
   set("labels_col", k=4) %>%
   hang.dendrogram(hang_height = -0.002) %>% # hang level
-  plot(main = "Caribbean Coral Microbiome Dendrogram",
-  horiz =  TRUE,  nodePar = list(cex = 0.01))
+  plot(main = "  Rhodobacteraceae \n   unifrac Dendrogram",
+  horiz =  FALSE,  nodePar = list(cex = 0.01))
 
 
 ```
